overlays/dev/be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: be
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: be
    spec:
      containers:
        - image: harbor.k8s.scg.skku.ac.kr/library/cs-grad-thesis-be
          imagePullPolicy: Always
          name: be
          ports:
            - containerPort: 8000
